fix(visual): set icon color to contrast-fade in dedicated components

--- a/packages/components-experimental/form-field/_form-field-theme.scss
+++ b/packages/components-experimental/form-field/_form-field-theme.scss
@@ -69,10 +69,10 @@
         }
     }
 
-    .kbq-form-field__prefix,
-    .kbq-form-field__suffix {
+    .kbq-form-field_prefix,
+    .kbq-form-field_suffix {
         .kbq-icon {
-            color: var(--kbq-icon-fade-contrast-color);
+            color: var(--kbq-icon-contrast-fade);
         }
     }
 }
