--- a/packages/components/form-field/_form-field-theme.scss
+++ b/packages/components/form-field/_form-field-theme.scss
@@ -70,7 +70,7 @@
     .kbq-form-field__prefix,
     .kbq-form-field__suffix {
         .kbq-icon {
-            color: var(--kbq-icon-fade-contrast-color);
+            color: var(--kbq-icon-contrast-fade);
         }
     }
 
